--- a/Pandas/my_first_panda.ipynb
+++ b/Pandas/my_first_panda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "33a773f4",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d291801c",
    "metadata": {},
    "outputs": [
@@ -32,12 +32,12 @@
       "  Using cached pandas-2.3.3-cp313-cp313-macosx_11_0_arm64.whl.metadata (91 kB)\n",
       "Collecting numpy>=1.26.0 (from pandas)\n",
       "  Using cached numpy-2.3.4-cp313-cp313-macosx_14_0_arm64.whl.metadata (62 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/kannans100/MyPython/.venv/lib/python3.13/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in ./myenv/lib/python3.13/site-packages (from pandas) (2.9.0.post0)\n",
       "Collecting pytz>=2020.1 (from pandas)\n",
       "  Using cached pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
       "Collecting tzdata>=2022.7 (from pandas)\n",
       "  Using cached tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/kannans100/MyPython/.venv/lib/python3.13/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Requirement already satisfied: six>=1.5 in ./myenv/lib/python3.13/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
       "Using cached pandas-2.3.3-cp313-cp313-macosx_11_0_arm64.whl (10.7 MB)\n",
       "Using cached numpy-2.3.4-cp313-cp313-macosx_14_0_arm64.whl (5.1 MB)\n",
       "Using cached pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "eaf95d98",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "888a2ff2",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
