--- a/Pandas/my_first_db_sql.ipynb
+++ b/Pandas/my_first_db_sql.ipynb
@@ -251,6 +251,310 @@
       "2. View Users\n",
       "3. Update User\n",
       "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
+      "5. Exit\n",
+      "Invalid choice. Try again.\n",
+      "\n",
+      "--- User Database Menu ---\n",
+      "1. Add User\n",
+      "2. View Users\n",
+      "3. Update User\n",
+      "4. Delete User\n",
       "5. Exit\n"
      ]
     }
