--- a/Pandas/my_pandas_merge.ipynb
+++ b/Pandas/my_pandas_merge.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "559a38cc",
+   "execution_count": 1,
+   "id": "6c48c96d",
    "metadata": {},
    "outputs": [
     {
@@ -11,23 +11,12 @@
      "output_type": "stream",
      "text": [
       "hello\n",
-      "Collecting pandas\n",
-      "  Using cached pandas-2.3.3-cp313-cp313-macosx_11_0_arm64.whl.metadata (91 kB)\n",
-      "Collecting numpy>=1.26.0 (from pandas)\n",
-      "  Using cached numpy-2.3.4-cp313-cp313-macosx_14_0_arm64.whl.metadata (62 kB)\n",
+      "Requirement already satisfied: pandas in /Users/kannans100/MyPython/.venv/lib/python3.13/site-packages (2.3.3)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /Users/kannans100/MyPython/.venv/lib/python3.13/site-packages (from pandas) (2.3.4)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/kannans100/MyPython/.venv/lib/python3.13/site-packages (from pandas) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Using cached pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Using cached tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/kannans100/MyPython/.venv/lib/python3.13/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Users/kannans100/MyPython/.venv/lib/python3.13/site-packages (from pandas) (2025.2)\n",
       "Requirement already satisfied: six>=1.5 in /Users/kannans100/MyPython/.venv/lib/python3.13/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Using cached pandas-2.3.3-cp313-cp313-macosx_11_0_arm64.whl (10.7 MB)\n",
-      "Using cached numpy-2.3.4-cp313-cp313-macosx_14_0_arm64.whl (5.1 MB)\n",
-      "Using cached pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
-      "Using cached tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
-      "Installing collected packages: pytz, tzdata, numpy, pandas\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4/4\u001b[0m [pandas]2m3/4\u001b[0m [pandas]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed numpy-2.3.4 pandas-2.3.3 pytz-2025.2 tzdata-2025.2\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
@@ -42,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "e7d606af",
+   "execution_count": 2,
+   "id": "ee21adf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,143 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "249166ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>200</td>\n",
-       "      <td>Bob</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>300</td>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    id     name  score\n",
-       "0  200      Bob     85\n",
-       "1  300  Charlie     90"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.merge(df1, df2, on='id', how='inner')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c6afb0d8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100</td>\n",
-       "      <td>Alice</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>200</td>\n",
-       "      <td>Bob</td>\n",
-       "      <td>85.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>300</td>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>90.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    id     name  score\n",
-       "0  100    Alice    NaN\n",
-       "1  200      Bob   85.0\n",
-       "2  300  Charlie   90.0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.merge(df1, df2, on='id', how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "608b5a73",
+   "execution_count": 3,
+   "id": "55b87e65",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +99,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>400</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "      <td>95</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -256,22 +110,22 @@
        "    id     name  score\n",
        "0  200      Bob     85\n",
        "1  300  Charlie     90\n",
-       "2  400      NaN     95"
+       "2  400              95"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.merge(df1, df2, on='id', how='right')"
+    "pd.merge(df1, df2, on='id', how='inner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "dede3070",
+   "execution_count": 4,
+   "id": "014a8e4c",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +176,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>400</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "      <td>95.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -334,10 +188,159 @@
        "0  100    Alice    NaN\n",
        "1  200      Bob   85.0\n",
        "2  300  Charlie   90.0\n",
-       "3  400      NaN   95.0"
+       "3  400            95.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(df1, df2, on='id', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3285861b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>200</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>300</td>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>400</td>\n",
+       "      <td></td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id     name  score\n",
+       "0  200      Bob     85\n",
+       "1  300  Charlie     90\n",
+       "2  400              95"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(df1, df2, on='id', how='right')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5dc195e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>300</td>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>400</td>\n",
+       "      <td></td>\n",
+       "      <td>95.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id     name  score\n",
+       "0  100    Alice    NaN\n",
+       "1  200      Bob   85.0\n",
+       "2  300  Charlie   90.0\n",
+       "3  400            95.0"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
